[package]
name = "tiny-adnl"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2021"

[dependencies]
aes = "0.8.1"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
crossbeam-queue = "0.3"
ctr = "0.9.1"
curve25519-dalek-ng = "4.1"
dashmap = "5.2.0"
generic-array = "0.14.5"
hex = "0.4"
libc = "0.2"
log = "0.4"
parking_lot = "0.12.0"
rand = "0.8"
rustc-hash = "1.1.0"
serde = "1.0"
sha2 = "0.9"
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
thiserror = "1.0"
tokio = { version = "1.16.1", features = ["sync", "net", "rt", "time", "io-util", "macros"] }
tokio-io-timeout = "1.2.0"
tokio-util = "0.7.0"
x25519-dalek-ng = "1.1.1"
zstd = "0.11"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
raptorq = { git = "https://github.com/Rexagon/raptorq.git" }

ton_types = { git = "https://github.com/broxus/ton-labs-types" }

[dependencies.ton_api]
git = "https://github.com/broxus/ton-labs-tl.git"
package = "ton_api"
default-features = false
features = ["ton_api"]

[features]
pkg-config = ["zstd/pkg-config"]
