[package]
name = "everscale-network"
version = "0.3.11"
description = "Implementation of the network part of the Everscale blockchain"
repository = "https://github.com/broxus/everscale-network"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
rust-version = "1.60.0"
edition = "2021"
include = ["src/**/*.rs", "src/**/*.tl", "README.md"]
license = "Apache-2.0"

[[example]]
name = "adnl"
path = "examples/adnl.rs"

[[example]]
name = "rldp"
path = "examples/rldp.rs"

[profile.release]
debug = true

[dependencies]
aes = "0.8.1"
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1.0"
crossbeam-queue = { version = "0.3", optional = true }
ctr = "0.9.1"
dashmap = "5.3.2"
everscale-crypto = "0.1"
everscale-raptorq = { version = "1.7.0", optional = true }
frunk_core = "0.4.0"
futures-util = "0.3.21"
generic-array = "0.14.5"
hex = "0.4"
libc = "0.2"
once_cell = "1.13.0"
parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
rand = "0.8"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
smallvec = { version = "1.9.0", features = ["union", "const_generics"] }
thiserror = "1.0"
tl-proto = { version = "0.3", features = ["derive", "bytes"] }
tokio = { version = "1", features = ["sync", "net", "rt", "time", "io-util", "macros"] }
tokio-util = "0.7.0"
tracing = "0.1"
zstd = { version = "0.11", optional = true }

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }

[features]
default = ["log", "rldp", "dht", "overlay"]
log = ["tracing/log"]
rldp = ["dep:everscale-raptorq", "dep:zstd"]
dht = []
overlay = ["rldp", "dep:crossbeam-queue"]
