[package]
name = "everscale-network"
version = "0.4.0"
description = "Implementation of the network part of the Everscale blockchain"
repository = "https://github.com/broxus/everscale-network"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
rust-version = "1.64.0"
edition = "2021"
include = ["src/**/*.rs", "src/**/*.tl", "README.md"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "adnl"
path = "examples/adnl.rs"

[[example]]
name = "rldp"
path = "examples/rldp.rs"

[[example]]
name = "dht"
path = "examples/dht.rs"

[[example]]
name = "overlay-broadcast"
path = "examples/overlay_broadcast.rs"

[[example]]
name = "overlay-query"
path = "examples/overlay_query.rs"

[profile.release]
debug = true

[dependencies]
aes = "0.8"
ahash = "0.8"
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
crossbeam-queue = { version = "0.3", optional = true }
ctr = "0.9"
dashmap = "5.4"
everscale-crypto = "0.2.0-pre.1"
everscale-raptorq = { version = "1.7.0", optional = true }
frunk_core = "0.4"
futures-util = "0.3"
generic-array = "0.14"
hex = "0.4"
libc = "0.2"
once_cell = "1.13.0"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
smallvec = { version = "1.9.0", features = ["union", "const_generics"] }
thiserror = "1.0"
tl-proto = { version = "0.4", features = ["derive", "bytes"] }
tokio = { version = "1", features = ["sync", "net", "rt", "time", "io-util", "macros"] }
tokio-util = "0.7.0"
tracing = "0.1"
zstd = { version = "0.12", optional = true }

[dev-dependencies]
base64 = "0.13"
serde_json = "1.0"
public-ip = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }
tracing-subscriber = "0.3"

[features]
default = ["log", "rldp", "dht", "overlay"]
log = ["tracing/log"]
rldp = ["dep:everscale-raptorq", "dep:zstd"]
dht = []
overlay = ["rldp", "dep:crossbeam-queue"]
